--- a/locales/zh-CN/species.yaml
+++ b/locales/zh-CN/species.yaml
@@ -340,3 +340,9 @@ pet_aixi:
 pet_ailixisi:
   name: 艾丽希斯
   description: 艾丽希斯在漫长的光阴中一直守护着能源之树 它几乎忘记自己是谁
+pet_linna:
+  name: 琳娜
+  description: 琳娜出生于能源之树的冰晶魔枢她继承了精灵王心脏的力量和精神 冷静 镇定 坚强
+pet_katelinna:
+  name: 卡特琳娜
+  description: 卡特琳娜曾经为了帮助冰沁氏族而化身人形 她的歌声被所有族人铭记
