--- a/locales/zh-CN/mark_emblem.yaml
+++ b/locales/zh-CN/mark_emblem.yaml
@@ -160,3 +160,6 @@ mark_emblem_anhun:
 mark_emblem_chuanliu:
   name: 川流
   description: 顺流时每次技能命中对手可恢复5点怒气，逆流时自己造成的伤害增加10%
+mark_emblem_juexing:
+  name: 觉醒
+  description: 使雷神觉醒回合数+1
