--- a/locales/zh-CN/species.yaml
+++ b/locales/zh-CN/species.yaml
@@ -352,3 +352,6 @@ pet_naipu:
 pet_naiputulong:
   name: 耐普图隆
   description: 日复一日，耐普图隆都张开净化结界，抵御污染的侵袭，净化被污染的生灵
+pet_leiyi:
+  name: 雷伊
+  description: 雷电之子 它身环金色闪电 驾驭着超凡的电能量 兼备神兽的力量与人类智慧的精灵
