--- a/locales/zh-CN/mark_emblem.yaml
+++ b/locales/zh-CN/mark_emblem.yaml
@@ -172,3 +172,6 @@ mark_emblem_dongqi:
 mark_emblem_baonuan:
   name: 保暖
   description: 使保暖有20%几率额外提升1级特防
+mark_emblem_fasi:
+  name: 发丝
+  description: 使发丝技能不消耗怒气
