--- a/locales/zh-CN/mark_emblem.yaml
+++ b/locales/zh-CN/mark_emblem.yaml
@@ -175,3 +175,6 @@ mark_emblem_baonuan:
 mark_emblem_fasi:
   name: 发丝
   description: 使发丝技能不消耗怒气
+mark_emblem_zimian:
+  name: 自眠
+  description: 使自我催眠技能先制+1
