--- a/locales/zh-CN/mark_ability.yaml
+++ b/locales/zh-CN/mark_ability.yaml
@@ -196,3 +196,6 @@ mark_ability_haozhan:
 mark_ability_xifa:
   name: 戏法
   description: 戏法技能使对手获得戏法迷惑
+mark_ability_renzhen:
+  name: 认真
+  description: 属性技能必中
