--- a/locales/zh-CN/species.yaml
+++ b/locales/zh-CN/species.yaml
@@ -403,3 +403,9 @@ pet_aika:
 pet_aikaweite:
   name: 埃卡维特
   description: 埃卡维特在长年摆弄小物的过程中，学会了变戏法，让所有观众都眼花缭乱
+pet_huanhuan:
+  name: 浣浣
+  description: 浣浣天生有一种能力 会变身贪吃的它经常变身混入居民家里偷吃东西
+pet_huanli:
+  name: 浣狸
+  description: 即使是成长为浣狸之后 它也经常在变身中途失败 被居民抓到扔出屋来
