--- a/locales/zh-CN/mark_emblem.yaml
+++ b/locales/zh-CN/mark_emblem.yaml
@@ -196,3 +196,6 @@ mark_emblem_moshu:
 mark_emblem_wuxing:
   name: 无性
   description: 使浣浣遇到无性别的精灵，属性攻击会随机产生2个中的一个效果
+mark_emblem_rouxing:
+  name: 柔软
+  description: 20%额外提升一级特防
