feat(newpet): 葛蕾芬、萨伯尔

--- a/locales/zh-CN/mark.yaml
+++ b/locales/zh-CN/mark.yaml
@@ -766,3 +766,15 @@ mark_shadu:
 mark_shaduhongxue:
   name: 砂毒红血
   description: 下一次攻击特攻承受50%自损伤害 使用物攻时中毒
+mark_tongjiling:
+  name: 通缉令
+  description: 受到伤害增加40点
+mark_kaowen:
+  name: 拷问
+  description: 造成伤害减少40点
+mark_yingyongyizhi:
+  name: 英勇遗志
+  description: 被击败时弱化对手速度1级
+mark_bileiyanshen:
+  name: 壁垒延伸
+  description: 被击败时弱化对手攻击1级
